@@ -23,7 +23,7 @@ static @property int[string] sPredefinedVersions()
 		[
 			"DigitalMars" : 0,
 			"GNU" : 0,
-			"LDC" : -1,
+			"LDC" : 0,
 			"SDC" : -1,
 			"D_NET" : -1,
 
@@ -53,16 +53,16 @@ static @property int[string] sPredefinedVersions()
 			"X86_64" : 0,
 			"ARM" : -1,
 			"ARM_Thumb" : -1,
-			"ARM_Soft" : -1,
+			"ARM_SoftFloat" : -1,
 			"ARM_SoftFP" : -1,
-			"ARM_HardFP" : -1,
-			"ARM64" : -1,
+			"ARM_HardFloat" : -1,
+			"AArch64" : -1,
+			"Epiphany" : -1,
 			"PPC" : -1,
-			"PPC_SoftFP" : -1,
-			"PPC_HardFP" : -1,
+			"PPC_SoftFloat" : -1,
+			"PPC_HardFloat" : -1,
 			"PPC64" : -1,
 			"IA64" : -1,
-			"MIPS" : -1,
 			"MIPS32" : -1,
 			"MIPS64" : -1,
 			"MIPS_O32" : -1,
@@ -70,13 +70,14 @@ static @property int[string] sPredefinedVersions()
 			"MIPS_O64" : -1,
 			"MIPS_N64" : -1,
 			"MIPS_EABI" : -1,
-			"MIPS_NoFloat" : -1,
 			"MIPS_SoftFloat" : -1,
 			"MIPS_HardFloat" : -1,
+			"NVPTX" : -1,
+			"NVPTX64" : -1,
 			"SPARC" : -1,
 			"SPARC_V8Plus" : -1,
-			"SPARC_SoftFP" : -1,
-			"SPARC_HardFP" : -1,
+			"SPARC_SoftFloat" : -1,
+			"SPARC_HardFloat" : -1,
 			"SPARC64" : -1,
 			"S390" : -1,
 			"S390X" : -1,
@@ -85,11 +86,18 @@ static @property int[string] sPredefinedVersions()
 			"SH" : -1,
 			"SH64" : -1,
 			"Alpha" : -1,
-			"Alpha_SoftFP" : -1,
-			"Alpha_HardFP" : -1,
+			"Alpha_SoftFloat" : -1,
+			"Alpha_HardFloat" : -1,
 
 			"LittleEndian" : 1,
 			"BigEndian" : -1,
+			
+			"ELFv1" : -1,
+			"ELFv2" : -1,
+
+			"CRuntime_DigitalMars" : 0,
+			"CRuntime_Microsoft" : 0,
+			"CRuntime_Glibc" : -1,
 
 			"D_Coverage" : 0,
 			"D_Ddoc" : 0,
